--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "dev": "nodemon src/server.js",
+    "start-nodemon": "nodemon src/server.js",
     "start": "node src/server.js"
   },
   "author": "Enes Karakaş",
