--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test-watch": "jest --watch",
     "start-nodemon": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "cluster": "npx pm2 start src/server.js -i max",
+    "cluster-stop": "npx pm2 stop src/server.js"
   },
   "author": "Enes Karakaş",
   "license": "ISC",
@@ -14,7 +16,8 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.3.2",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pm2": "^5.2.2"
   },
   "devDependencies": {
     "jest": "^29.3.1",
