--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.3.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.7.5",
     "morgan": "^1.10.0",
     "pm2": "^5.2.2"
   },
