--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,9 @@
   },
   "author": "Enes Karakaş",
   "license": "ISC",
+  "jest": {
+    "testEnvironment": "node"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.3.2",
