--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "axios": "^1.2.0",
     "cors": "^2.8.5",
     "csv-parse": "^5.3.2",
     "dotenv": "^16.0.3",
