--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           node-version: '16'
       - run: npm install
-      - run: npm run fast-build-and-move --prefix client
+      - run: npm run fast-build-and-move-for-unix --prefix client
