--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -12,6 +12,6 @@ jobs:
       - name: Use node.js version 16
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: 16
       - run: npm install
       - run: npm run fast-build-and-move-for-unix --prefix client
