--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "build": "react-scripts build",
     "move-build": "move build ../server/public",
     "build-and-move": "npm run build && npm run move-build",
-    "fast-build-and-move": "set BUILD_PATH=../server/public&& react-scripts build",
+    "fast-build-and-move": "set BUILD_PATH=../server/public&& npx react-scripts build",
     "fast-build-and-move-for-unix": "BUILD_PATH=../server/public react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
