--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,12 +6,18 @@ on:
     branches: [main]
 jobs:
   build:
+    env:
+      CI: true
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use node.js version 16
+      - name: Use node.js version ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: ${{ matrix.node-version }}
       - run: npm install --prefix client
       - run: npm run fast-build-and-move --prefix client
+      - run: npm run test
