--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,9 +8,11 @@ jobs:
   build:
     env:
       CI: true
+      MONGO_URL: mongodb://localhost/nasa-test
     strategy:
       matrix:
         node-version: [14.x, 16.x]
+        mongodb-version: ['4.4', '6.0']
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -18,6 +20,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      - name: MongoDB in GitHub Actions
+        uses: supercharge/mongodb-github-action@1.8.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
       - run: npm install --prefix client
       - run: npm run fast-build-and-move --prefix client
       - run: npm run test
